# fastapi-tdd-docker

./: README.md
.github/workflows/: main.yml
project/: .dockerignore  Dockerfile  Dockerfile.prod  requirements-dev.txt  requirements.txt
project/app/: db.py  main.py  pyproject.toml  requirements.txt  summarizer.py
project/app/api/: crud.py  summaries.py
project/app/models/: pydantic.py
project/tests/: test_summaries.py  test_summaries_unit.py
