[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Francisco De La Cruz",email = "helloquico@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (==0.115.12)",
    "uvicorn (==0.34.1)",
    "pydantic-settings (==2.8.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
